Fix the most critical layout issues on NC14
The application layout is now fully usable also on Nextcloud 14 beta and
RC versions. There are still glitches but nothing show-stopping.

This has been achieved by including style definitions which used to be set in
the core but are no longer in NC14. Defining these in the application
shouldn't affect the layout on older cloud versions.

refs #660

--- a/css/public/app.css
+++ b/css/public/app.css
@@ -687,6 +687,10 @@ input.edit-list, input.new-list {
 	width: 100%;
 }
 
+#app-sidebar {
+	position: fixed;
+}
+
 #app-sidebar * {
 	display: inline-block;
 }
@@ -880,6 +884,14 @@ input.edit-list, input.new-list {
 
 .icon-audio {
 	background-image: url('../../img/audio.svg');
+}
+
+#app {
+	width: 100%;
+}
+
+#app-content.with-app-sidebar {
+	margin-right: 27%;
 }
 
 /* angular JS wrapper for main controller */
@@ -1084,7 +1096,7 @@ div:hover > .play-pause,
 }
 
 .highlight {
-	background-color: rgba(0,0,0,0.025);;
+	background-color: rgba(0,0,0,0.025);
 }
 
 .tablet .album-area {
