--- a/css/style-sidebar.css
+++ b/css/style-sidebar.css
@@ -8,6 +8,10 @@
  * @copyright Pauli Järvinen 2018
  */
 
+#app-sidebar {
+	position: fixed;
+}
+
 #app-sidebar * {
 	display: inline-block;
 }
